fix: layout broken

--- a/styles/dates.css
+++ b/styles/dates.css
@@ -13,6 +13,12 @@ section#dates-container header form {
     flex-direction: column;
 }
 
+section#dates-container header form label {
+    font-size: 0.75rem;
+    color: #AFABB6;
+    margin-bottom: 0.5rem;
+}
+
 section#dates-container header form input {
     background-color: #17171A;
     border: 2px solid #252529;
@@ -22,27 +28,42 @@ section#dates-container header form input {
     padding: 0.75rem;
     font-size: 1rem;
     height: 3rem;
-    width: 100%;
 }
 
 section#dates-container header form input:focus {
     outline: 2px solid #A881E6;
 }
 
+section#dates-container header form div#inputs-wrapper {
+    display: flex;
+    gap: 0.75rem;
+}
+
+section#dates-container header form div#inputs-wrapper > div {
+    display: flex;
+    flex-direction: column;
+}
+
+section#dates-container header form input#date, section#dates-container header form input#date-input, 
+section#dates-container header form input#date, section#dates-container header form input#time-input {
+    margin-bottom: 0;
+}
+
 section#dates-container header form button[type="submit"] {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
-    width: 2.75rem;
+    border-radius: 6px;
+    /* width: 2.75rem; */
     height: 2.75rem;
-    min-width: 2.75rem;
+    /* min-width: 2.75rem; */
     min-height: 2.75rem;
     background-color: #7450AC;
     border: 0;
     align-self: flex-end;
     margin-bottom: 0.1rem;
     cursor: pointer;
+    flex: 1;
 }
 
 section#dates-container header form button[type="submit"] ion-icon {
